Fix gap between banner and about.

--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,3 +1,6 @@
+.banner {
+    background-color: #4682B4;
+}
 .hello {
     position: fixed;
     top: 45vh;
